--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,4 +1,4 @@
 <select name="" id="" (change)="onChange($event.target.value)">
   <option value="null" selected>--Elige una categoría--</option>
-  <option value="{{api.id}}" *ngFor="let api of listApis">{{ api.category }}</option>
+  <option [value]="list.id" *ngFor="let list of listCategories">{{ list.category }}</option>
 </select>
