añado @Output en component container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <h1>
-  Welcome to {{title}}!
+  Welcome to {{TITLE}}!
 </h1>
-<app-filter></app-filter>
+<app-container></app-container>
 
 
