maquetación básica y componente questions funcionando

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<h1>
-  Welcome to {{TITLE}}!
-</h1>
-<app-container></app-container>
+<div class="container">
+  <h1>
+    Welcome to {{TITLE}}!
+  </h1>
+  <app-container></app-container>
+</div>
 
 
