--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,1 +1,8 @@
-<app-filter (listFiltered)="getListResult($event)"></app-filter>
+<div class="row">
+  <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+    <app-filter (listFiltered)="getListResult($event)"></app-filter>
+  </div>
+  <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+    <app-questions [questions]="questions"></app-questions>
+  </div>
+</div>
